[package]
name = "komf"
version = "0.1.0"
authors = ["TyanNN <tyannn@cocaine.ninja>"]

[dependencies]
iron = "*"
staticfile = "*"
mount = "*"

serde = "0.8.12"
serde_derive = "*"

maud = { git = "https://github.com/lfairy/maud", features = ["iron"] }
maud_macros = { git = "https://github.com/lfairy/maud" }

multipart = { version = "*", features = [ "iron" ] }
rustbreak = { version = "*", default-features = false, features = [ "yaml" ], git = "https://github.com/TheNeikos/rustbreak" }
sha1 = "*"
rand = "*"
lazy_static = "*"
chrono = { version = "*", features = [ "serde" ] }
